--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Nurse Schedule</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="dist/assets/css/main.css">
 	<script src="node_modules/angular/angular.js"></script>
     <script type="text/javascript" src="ScheduleDirective/ScheduleDirective.js"></script>
 </head>
