--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html>
 
 	<script src="node_modules/angular/angular.js"></script>
-	<script src="app/src/MainController.js"></script>
+	<!--<script src="app/src/MainController.js"></script>-->
+	<script src="app/src/NavController.js"></script>
+	<script src="node_modules/angular-material/angular-material.js"></script>
+	<script src="node_modules/angular-animate/angular-animate.js"></script>
+	<script src="node_modules/angular-aria/angular-aria.js"></script>
+	<link rel="stylesheet" type="text/css" href="node_modules/angular-material/angular-material.min.css">
+	
 <!--<script type="text/javascript" src="app/src/ScheduleDirective/ScheduleDirective.js"></script>-->
 
 	<head>
@@ -12,12 +18,84 @@
 		<link rel="stylesheet" type="text/css" href="dist/assets/css/main.css">
 		
 	</head>
-	<body ng-app="myApp" ng-controller="MainController">
+	<body ng-app="myApp">
+		<div ng-controller="NavController" layout="column" style="height:500px;" ng-cloak>
 
-		Hello {{firstname}}!</br>
-		<input type="text" ng-model="text"></br>
-		{{text}}</br>
-		<button ng-click="clickMe()">Click me!</button>
+		<section layout="row" flex>
 
+			<md-sidenav
+				class="md-sidenav-left"
+				md-component-id="left"
+				md-is-locked-open="$mdMedia('gt-md')"
+				md-whiteframe="4">
+
+			<md-toolbar class="md-theme-indigo">
+				<h1 class="md-toolbar-tools">Sidenav Left</h1>
+			</md-toolbar>
+			<md-content layout-padding ng-controller="LeftCtrl">
+				<md-button ng-click="close()" class="md-primary" hide-gt-md>
+				Close Sidenav Left
+				</md-button>
+				<p hide show-gt-md>
+				This sidenav is locked open on your device. To go back to the default behavior,
+				narrow your display.
+				</p>
+			</md-content>
+
+			</md-sidenav>
+
+			<md-content flex layout-padding>
+
+			<div layout="column" layout-align="top center">
+				<p>
+				The left sidenav will 'lock open' on a medium (>=960px wide) device.
+				</p>
+				<p>
+				The right sidenav will focus on a specific child element.
+				</p>
+
+				<div>
+				<md-button ng-click="toggleLeft()"
+					class="md-primary" hide-gt-md>
+					Toggle left
+				</md-button>
+				</div>
+
+				<div>
+				<md-button ng-click="toggleRight()"
+					ng-hide="isOpenRight()"
+					class="md-primary">
+					Toggle right
+				</md-button>
+				</div>
+			</div>
+
+			<div flex></div>
+
+			</md-content>
+
+			<md-sidenav class="md-sidenav-right md-whiteframe-4dp" md-component-id="right">
+
+			<md-toolbar class="md-theme-light">
+				<h1 class="md-toolbar-tools">Sidenav Right</h1>
+			</md-toolbar>
+			<md-content ng-controller="RightCtrl" layout-padding>
+				<form>
+				<md-input-container>
+					<label for="testInput">Test input</label>
+					<input type="text" id="testInput"
+						ng-model="data" md-autofocus>
+				</md-input-container>
+				</form>
+				<md-button ng-click="close()" class="md-primary">
+				Close Sidenav Right
+				</md-button>
+			</md-content>
+
+			</md-sidenav>
+
+		</section>
+
+		</div>
 	</body>
 </html>
