--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="dist/assets/css/main.css">
+		<link rel="stylesheet" type="text/css" href="dist/assets/css/left-nav.css">
 		
 	</head>
 	<body ng-app="myApp">
-		<div ng-controller="NavController" layout="column" style="height:500px;" ng-cloak>
+		<div ng-controller="NavController" layout="column" id="left-nav" ng-cloak>
 
 		<section layout="row" flex>
 
@@ -30,16 +31,14 @@
 				md-whiteframe="4">
 
 			<md-toolbar class="md-theme-indigo">
-				<h1 class="md-toolbar-tools">Sidenav Left</h1>
+				<h1 class="md-toolbar-tools">Menu</h1>
 			</md-toolbar>
-			<md-content layout-padding ng-controller="LeftCtrl">
-				<md-button ng-click="close()" class="md-primary" hide-gt-md>
-				Close Sidenav Left
-				</md-button>
-				<p hide show-gt-md>
-				This sidenav is locked open on your device. To go back to the default behavior,
-				narrow your display.
-				</p>
+			<md-content layout-padding ng-controller="LeftCtrl" class="nav-content">
+				<md-button ng-click="close()" class="md-accent nav-option--close">Close Sidenav</md-button>
+				<md-button class="md-primary nav-option">Full scheudle</md-button>
+				<md-button class="md-primary nav-option">Schedule for nurse</md-button>
+				<md-button class="md-primary nav-option">Check Constraints</md-button>
+				<md-button class="md-primary nav-option">Generate new schedule</md-button>
 			</md-content>
 
 			</md-sidenav>
@@ -47,52 +46,26 @@
 			<md-content flex layout-padding>
 
 			<div layout="column" layout-align="top center">
-				<p>
-				The left sidenav will 'lock open' on a medium (>=960px wide) device.
-				</p>
-				<p>
-				The right sidenav will focus on a specific child element.
-				</p>
 
 				<div>
 				<md-button ng-click="toggleLeft()"
 					class="md-primary" hide-gt-md>
 					Toggle left
+				</br>
+				Literka
+				</br>
+				<div ng-repeat="shift in shifts">{{shift.signature}}</div>
 				</md-button>
 				</div>
 
-				<div>
-				<md-button ng-click="toggleRight()"
-					ng-hide="isOpenRight()"
-					class="md-primary">
-					Toggle right
-				</md-button>
-				</div>
 			</div>
 
-			<div flex></div>
+			<div flex>
+
+			</div>
 
 			</md-content>
 
-			<md-sidenav class="md-sidenav-right md-whiteframe-4dp" md-component-id="right">
-
-			<md-toolbar class="md-theme-light">
-				<h1 class="md-toolbar-tools">Sidenav Right</h1>
-			</md-toolbar>
-			<md-content ng-controller="RightCtrl" layout-padding>
-				<form>
-				<md-input-container>
-					<label for="testInput">Test input</label>
-					<input type="text" id="testInput"
-						ng-model="data" md-autofocus>
-				</md-input-container>
-				</form>
-				<md-button ng-click="close()" class="md-primary">
-				Close Sidenav Right
-				</md-button>
-			</md-content>
-
-			</md-sidenav>
 
 		</section>
 
