--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 
 	<script src="node_modules/angular/angular.js"></script>
-	<!--<script src="app/src/MainController.js"></script>-->
 	<script src="app/src/NavController.js"></script>
+	<script src="app/src/MainContentController.js"></script>
 	<script src="node_modules/angular-material/angular-material.js"></script>
 	<script src="node_modules/angular-animate/angular-animate.js"></script>
 	<script src="node_modules/angular-aria/angular-aria.js"></script>
@@ -17,58 +17,65 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="dist/assets/css/main.css">
 		<link rel="stylesheet" type="text/css" href="dist/assets/css/left-nav.css">
+		<link rel="stylesheet" type="text/css" href="dist/assets/css/main-content.css">
 		
 	</head>
 	<body ng-app="myApp">
 		<div ng-controller="NavController" layout="column" id="left-nav" ng-cloak>
 
-		<section layout="row" flex>
-
-			<md-sidenav
-				class="md-sidenav-left"
-				md-component-id="left"
-				md-is-locked-open="$mdMedia('gt-md')"
-				md-whiteframe="4">
-				
-				<md-toolbar class="md-theme-indigo">
-					<h1 class="md-toolbar-tools">Menu</h1>
-				</md-toolbar>
-				<md-content ng-controller="LeftCtrl" class="nav-content">
-					<md-button class="md-primary nav-option naw-option--normal">Full scheudle</md-button>
-					<md-button class="md-primary nav-option naw-option--normal">Schedule for nurse</md-button>
-					<md-button class="md-primary nav-option naw-option--normal">Check Constraints</md-button>
-					<md-button class="md-primary nav-option naw-option--normal">Generate new schedule</md-button>
-					<md-button ng-click="close()" class="md-warn nav-option nav-option--close">Close Sidenav</md-button>
-				</md-content>
-
-			</md-sidenav>
-
-			<md-content flex layout-padding>
-
-			<div layout="column" layout-align="top center">
-
-				<div>
-				<md-button ng-click="toggleLeft()"
-					class="md-primary" hide-gt-md>
-					Toggle left
-				</br>
-				Literka
-				</br>
-				<div ng-repeat="shift in shifts">{{shift.signature}}</div>
-				</md-button>
-				</div>
-
-			</div>
-
-			<div flex>
-
-			</div>
-
-			</md-content>
-
-
-		</section>
-
+      <section layout="row" flex>
+        <md-sidenav
+          class="md-sidenav-left"
+          md-component-id="left"
+          md-is-locked-open="$mdMedia('gt-md')"
+          md-whiteframe="4">
+          <md-toolbar class="md-theme-indigo">
+            <h1 class="md-toolbar-tools">Menu</h1>
+          </md-toolbar>
+          <md-content ng-controller="LeftCtrl" class="nav-content">
+            <md-button ng-click="showHome()" class="md-primary nav-option naw-option--normal">
+              Home
+            </md-button>
+            <md-button ng-click="showFullSchedule()" class="md-primary nav-option naw-option--normal">
+              Full scheudle
+            </md-button>
+            <md-button ng-click="showNurseSchedule()" class="md-primary nav-option naw-option--normal">
+              Schedule for nurse
+            </md-button>
+            <md-button ng-click="showCheckConstraints()" class="md-primary nav-option naw-option--normal">
+              Check Constraints
+            </md-button>
+            <md-button ng-click="showGenerateSchedule()" class="md-primary nav-option naw-option--normal">
+              Generate new schedule
+            </md-button>
+            <md-button hide-gt-md ng-click="close()" class="md-warn nav-option nav-option--close">
+              Close Sidenav
+            </md-button>
+          </md-content>
+        </md-sidenav>
+        <div style="position: absolute">
+          <md-content>
+            <md-button ng-click="toggleLeft()"
+              class="md-primary" hide-gt-md>
+                Menu
+            </md-button>
+          </md-content>
+        </div>
+        </br>
+        
+        <div ng-controller="MainContentController" layout="column" ng-cloak>
+          <section layout="column" id="main-content" layout-padding>
+            <div>
+              <div ng-if="flags.showHomeFlag">tu bedzie Home</div>
+              <div ng-if="flags.showFullScheduleFlag">tu bedzie FullSchedule</div>
+              <div ng-if="flags.showNurseScheduleFlag">tu bedzie NurseSchedule</div>
+              <div ng-if="flags.showCheckConstraintsFlag">tu bedzie CheckConstraints</div>
+              <div ng-if="flags.showGenerateScheduleFlag">tu bedzie GenerateSchedule</div>
+            </div>
+          </section>
+        </div>
+      </section>
 		</div>
+
 	</body>
 </html>
