before gulp connect

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               Home
             </md-button>
             <md-button ng-click="showFullSchedule()" class="md-primary nav-option naw-option--normal">
-              Full scheudle
+              Full scheduleyyy
             </md-button>
             <md-button ng-click="showNurseSchedule()" class="md-primary nav-option naw-option--normal">
               Schedule for nurse
