--- a/index.html
+++ b/index.html
@@ -38,22 +38,33 @@
             <h1 class="md-toolbar-tools">Menu</h1>
           </md-toolbar>
           <md-content ng-controller="LeftCtrl as $leftNavCtrl" class="nav-content">
-            <md-button ng-class="$leftNavCtrl.homeFlag ? 'nav-option--chosen' : ''" ng-click="$leftNavCtrl.showHome()" class="md-primary nav-option nav-option--normal">
+            <md-button ng-class="$leftNavCtrl.homeFlag ? 'nav-option--chosen' : ''" 
+              ng-click="$leftNavCtrl.showHome()" 
+              class="md-primary nav-option nav-option--normal">
               Home
             </md-button>
-            <md-button ng-class="$leftNavCtrl.fullScheduleFlag ? 'nav-option--chosen' : ''" ng-click="$leftNavCtrl.showFullSchedule()" class="md-primary nav-option nav-option--normal">
+            <md-button ng-class="$leftNavCtrl.fullScheduleFlag ? 'nav-option--chosen' : ''" 
+              ng-click="$leftNavCtrl.showFullSchedule()" 
+              class="md-primary nav-option nav-option--normal">
               Full schedule
             </md-button>
-            <md-button ng-class="$leftNavCtrl.nurseScheduleFlag ? 'nav-option--chosen' : ''" ng-click="$leftNavCtrl.showNurseSchedule()" class="md-primary nav-option nav-option--normal">
+            <md-button ng-class="$leftNavCtrl.nurseScheduleFlag ? 'nav-option--chosen' : ''" 
+              ng-click="$leftNavCtrl.showNurseSchedule()" 
+              class="md-primary nav-option nav-option--normal">
               Schedule for nurse
             </md-button>
-            <md-button ng-class="$leftNavCtrl.constraintsFlag ? 'nav-option--chosen' : ''" ng-click="$leftNavCtrl.showCheckConstraints()" class="md-primary nav-option nav-option--normal">
+            <md-button ng-class="$leftNavCtrl.constraintsFlag ? 'nav-option--chosen' : ''" 
+              ng-click="$leftNavCtrl.showCheckConstraints()" 
+              class="md-primary nav-option nav-option--normal">
               Check Constraints
             </md-button>
-            <md-button ng-class="$leftNavCtrl.generatorFlag ? 'nav-option--chosen' : ''" ng-click="$leftNavCtrl.showGenerateSchedule()" class="md-primary nav-option nav-option--normal">
+            <md-button ng-class="$leftNavCtrl.generatorFlag ? 'nav-option--chosen' : ''" 
+              ng-click="$leftNavCtrl.showGenerateSchedule()" 
+              class="md-primary nav-option nav-option--normal">
               Generate new schedule
             </md-button>
-            <md-button hide-gt-md ng-click="$leftNavCtrl.close()" class="md-warn nav-option nav-option--close">
+            <md-button hide-gt-md ng-click="$leftNavCtrl.close()" 
+            class="md-warn nav-option nav-option--close">
               Close Sidenav
             </md-button>
           </md-content>
@@ -87,9 +98,13 @@
                 <div ng-if="$ctrl.showMe">
                   <md-input-container>
                     <label>Nurses</label>
-                    <md-select ng-model="$ctrl.chosenNurse" md-selected-text="$ctrl.getSelectedText()" ng-change="$ctrl.changeNurse()">
+                    <md-select ng-model="$ctrl.chosenNurse" 
+                      md-selected-text="$ctrl.getSelectedText()" 
+                      ng-change="$ctrl.changeNurse()">
                       <md-optgroup label="nurses">
-                        <md-option ng-value="nurse" ng-repeat="nurse in $ctrl.nurses">{{nurse.name}}</md-option>
+                        <md-option ng-value="nurse" ng-repeat="nurse in $ctrl.nurses">
+                          {{nurse.name}}
+                        </md-option>
                       </md-optgroup>
                     </md-select>
                   </md-input-container>
