--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 	<script src="node_modules/angular/angular.js"></script>
 	<script src="app/src/NavController.js"></script>
+	<script src="app/src/ServerService.js"></script>
 	<script src="app/src/HomeController.js"></script>
 	<script src="app/src/FullScheduleController.js"></script>
 	<script src="app/src/NurseScheduleController.js"></script>
