--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
           class="md-sidenav-left"
           md-component-id="left"
           md-is-locked-open="$mdMedia('gt-md')"
-          md-whiteframe="4">
+          md-whiteframe="4"
+          style="height:100%">
           <md-toolbar class="md-theme-indigo">
             <h1 class="md-toolbar-tools">Menu</h1>
           </md-toolbar>
@@ -85,7 +86,8 @@
 
               <div ng-controller="HomeController as $homeCtrl">
                 <div ng-if="$homeCtrl.showMe">
-                  Hello in Nurse Scheduling Problem Application (NSPA)
+                  <h1>Nurse Scheduling Application (NSA)<h1>
+                    <img src="app/images/nurses.jpg" alt="nurses">
                 </div>
               </div>
               <div ng-controller="FullScheduleController as $fullCtrl">
@@ -173,7 +175,50 @@
 
               <div ng-controller="ConstraintsController as $constrCtrl">
                 <div ng-if="$constrCtrl.showMe">
-                  tu bedzie CheckConstraints
+                  <md-button class="md-raised md-warn" 
+                    ng-click="$constrCtrl.checkConstraints()">
+                    Check Constraints
+                  </md-button>
+
+                  <div class="o-constraints">
+                    <div hardConstraints>   
+                      <div class="c-constraint">
+                        Hard Constraints failed: {{$constrCtrl.constraintsJson[0].failedHardSum}}
+                        <md-progress-linear 
+                          class="md-warn"
+                          md-mode="determinate" 
+                          value="{{$constrCtrl.constraintsJson[0].failedHardSum}}">
+                        </md-progress-linear>
+                      </div>
+                      <div class="c-constraint"
+                        ng-repeat="hard in $constrCtrl.constraintsJson[0].failedHards track by $index">
+                        Hard{{$index+1}}: {{hard}}
+                        <md-progress-linear 
+                          class="md-warn"
+                          md-mode="determinate" 
+                          value="{{hard}}">
+                        </md-progress-linear>
+                      </div>
+                    </div>
+
+                    <div softConstraints>
+                      <div class="c-constraint">
+                        Soft Constraints failed: {{$constrCtrl.constraintsJson[1].failedSoftSum}}
+                        <md-progress-linear 
+                          md-mode="determinate" 
+                          value="{{$constrCtrl.constraintsJson[1].failedSoftSum}}">
+                        </md-progress-linear>
+                      </div>
+                      <div class="c-constraint" 
+                        ng-repeat="soft in $constrCtrl.constraintsJson[1].failedSofts track by $index">
+                        Soft{{$index+1}}: {{soft}}
+                        <md-progress-linear 
+                          md-mode="determinate" 
+                          value="{{soft/$constrCtrl.constraintsJson[1].failedSoftSum*100}}">
+                        </md-progress-linear>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
               
