--- a/index.html
+++ b/index.html
@@ -224,7 +224,9 @@
               
               <div ng-controller="GeneratorController as $genCtrl">
                 <div ng-if="$genCtrl.showMe">
-                  tu bedzie GenerateSchedule
+                  <md-button class="md-raised md-primary"> 
+                    Generate new schedule
+                  </md-button>
                 </div>
               </div>
             
