--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
               
               <div ng-controller="GeneratorController as $genCtrl">
                 <div ng-if="$genCtrl.showMe">
-                  <md-button class="md-raised md-primary"> 
+                  <md-button class="md-raised md-primary" ng-click="$genCtrl.generateSchedule()"> 
                     Generate new schedule
                   </md-button>
                 </div>
