going to full shcedule after generated schedule

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             </md-button>
             <md-button ng-class="$leftNavCtrl.fullScheduleFlag ? 'nav-option--chosen' : ''" 
               ng-click="$leftNavCtrl.showFullSchedule()" 
-              class="md-primary nav-option nav-option--normal">
+              class="md-primary nav-option nav-option--normal"
+              id="fullSchedule">
               Full schedule
             </md-button>
             <md-button ng-class="$leftNavCtrl.nurseScheduleFlag ? 'nav-option--chosen' : ''" 
