--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<link rel="stylesheet" type="text/css" href="dist/assets/css/main.css">
 		<link rel="stylesheet" type="text/css" href="dist/assets/css/left-nav.css">
 		<link rel="stylesheet" type="text/css" href="dist/assets/css/main-content.css">
+		<link rel="stylesheet" type="text/css" href="dist/assets/css/component.css">
 		
 	</head>
 	<body ng-app="myApp">
@@ -225,9 +226,22 @@
               
               <div ng-controller="GeneratorController as $genCtrl">
                 <div ng-if="$genCtrl.showMe">
-                  <md-button class="md-raised md-primary" ng-click="$genCtrl.generateSchedule()"> 
-                    Generate new schedule
-                  </md-button>
+                  <div class="c-file-input-form">
+                    <div class="box">
+                      <input type="file" accept=".txt" name="file-4[]" id="file-4" class="o-first-week-input inputfile inputfile-3" data-multiple-caption="{count} files selected" multiple />
+                      <label for="file-4" md-whiteframe="1"><span>Choose first week&hellip;</span></label>
+                    </div>
+                    <md-button class="c-custom-button md-raised md-primary" ng-click="$genCtrl.addFirstWeek()">
+                      Add file
+                    </md-button>
+                    <span>{{$genCtrl.msgInfo}}</span>
+                    <md-button ng-show="$genCtrl.fileAddedFlag" class="c-custom-button md-raised md-primary" ng-click="$genCtrl.generateSchedule()"> 
+                      Generate new schedule
+                    </md-button>
+                    <div ng-show="$genCtrl.loader" layout="row" layout-sm="column" layout-align="space-around">
+                      <md-progress-circular style="position: absolute; top: 50%; right: 50%;" md-diameter="96" md-mode="indeterminate"></md-progress-circular>
+                    </div>
+                  </div>
                 </div>
               </div>
             
