--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                       Generate new schedule
                     </md-button>
                     <div ng-show="$genCtrl.loader" layout="row" layout-sm="column" layout-align="space-around">
-                      <md-progress-circular style="position: absolute; top: 50%; right: 50%;" md-diameter="96" md-mode="indeterminate"></md-progress-circular>
+                      <md-progress-circular class="c-loader" md-diameter="96" md-mode="indeterminate"></md-progress-circular>
                     </div>
                   </div>
                 </div>
