--- a/index.html
+++ b/index.html
@@ -240,7 +240,10 @@
                     </md-button>
                     <span>{{$genCtrl.msgInfo}}</span>
                     <md-button ng-show="$genCtrl.fileAddedFlag" class="c-custom-button md-raised md-primary" ng-click="$genCtrl.generateSchedule()"> 
-                      Generate new schedule
+                      Generate (greedy)
+                    </md-button>
+                    <md-button ng-show="$genCtrl.fileAddedFlag" class="c-custom-button md-raised md-primary" ng-click="$genCtrl.generateACO()"> 
+                      Generate (greedy + ACO)
                     </md-button>
                     <div ng-show="$genCtrl.loader" layout="row" layout-sm="column" layout-align="space-around">
                       <md-progress-circular class="c-loader" md-diameter="96" md-mode="indeterminate"></md-progress-circular>
